# asterinas

./: .gitignore  404.html  AGENTS.md  Cargo.toml  Makefile  README.md  index.html  print.html  searcher-c2a407aa.js  searchindex-41ba5e29.js  searchindex-798cad6e.js  toc-26a7b232.js  toc-964e7a0a.js  toc.html
.github/workflows/: codex-review.yml  review_pr_with_codex.yml
book/src/: SUMMARY.md
distro/: index.html
distro/aster_nixos_installer/: default.nix
distro/popular-applications/: containerization.html  desktop-environment.html  index.html  package-management.html
kernel/: advanced-instructions.html  index.html  intel-tdx.html  roadmap.html  the-framekernel-architecture.html
kernel/linux-compatibility/: index.html
kernel/src/: error.rs  lib.rs  (+2 more)
osdk/: Cargo.toml
osdk/guide/: advanced-topics.html  create-project.html  index.html  intel-tdx.html  run-project.html  why.html  work-in-workspace.html
osdk/reference/: environment-variables.html  index.html  manifest.html
osdk/reference/commands/: build.html  debug.html  index.html  new.html  profile.html  run.html  test.html
osdk/src/: arch.rs  cli.rs  error.rs  util.rs
osdk/src/base_crate/: mod.rs
osdk/src/bundle/: bin.rs  file.rs  mod.rs  vm_image.rs
osdk/src/commands/: profile.rs  run.rs
osdk/src/config/: manifest.rs  mod.rs
osdk/src/config/scheme/: action.rs  boot.rs  grub.rs  mod.rs  qemu.rs
ostd/: a-100-line-kernel.html  index.html
rfcs/: 0001-rfc-process.html  0002-asterinas-nixos.html  index.html  rfc-template.html
to-contribute/: boterinas.html  index.html  version-bump.html
(+397 files in other folders)
