[package]
name = "cargo-osdk"
version = "0.17.1"
edition = "2024"
description = "Accelerate OS development with Asterinas OSDK"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/asterinas/asterinas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linux-bzimage-builder = { version = "0.17.1", path = "../ostd/libs/linux-bzimage/builder" }
clap = { version = "4.4.17", features = ["cargo", "derive"] }
chrono = "0.4.38"
env_logger = "0.11.0"
inferno = "0.11.21"
indexmap = "2.2.1"
indicatif = "0.17.8" # For a commandline progress bar
log = "0.4.20"
quote = "1.0.35"
regex = "1.10.4"
rev_buf_reader = "0.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
shlex = "1.3.0"
syn = { version = "2.0.52", features = ["extra-traits", "full", "parsing", "printing"] }
tempfile = "3.14.0"
toml = { version = "0.8.8", features = ["preserve_order"] }
which = "8.0.0"
whoami = "1.6.1"
rustc_version = "0.4.1"

[dev-dependencies]
assert_cmd = "2.0.13"

[patch.crates-io]
# Temporary workaround for the `core2` yank; see #3132.
# TODO: Once upstream `libflate` publishes the fix and `core2` is available again on crates.io, revert the workaround introduced by PR #3134.
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }
